VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc9Down.err
[8MB/454.7MB][  1%][>                                                 ][2.667MB/s]  [16MB/454.7MB][  3%][=>                                                ][3.2MB/s]  [24MB/454.7MB][  5%][==>                                               ][4MB/s]  [32MB/454.7MB][  7%][===>                                              ][4MB/s]  [40MB/454.7MB][  8%][====>                                             ][4MB/s]  [48MB/454.7MB][ 10%][=====>                                            ][4MB/s]  [56MB/454.7MB][ 12%][======>                                           ][4MB/s]  [64MB/454.7MB][ 14%][=======>                                          ][4MB/s]  [72MB/454.7MB][ 15%][=======>                                          ][4MB/s]  [80MB/454.7MB][ 17%][========>                                         ][4MB/s]  [88MB/454.7MB][ 19%][=========>                                        ][4MB/s]  [96MB/454.7MB][ 21%][==========>                                       ][3.84MB/s]  [104MB/454.7MB][ 22%][===========>                                      ][3.714MB/s]  [112MB/454.7MB][ 24%][============>                                     ][3.5MB/s]  [120MB/454.7MB][ 26%][=============>                                    ][3.429MB/s]  [128MB/454.7MB][ 28%][==============>                                   ][3.282MB/s]  [136MB/454.7MB][ 29%][==============>                                   ][3.238MB/s]  [144MB/454.7MB][ 31%][===============>                                  ][3.13MB/s]  [152MB/454.7MB][ 33%][================>                                 ][3.04MB/s]  [160MB/454.7MB][ 35%][=================>                                ][2.963MB/s]  [168MB/454.7MB][ 36%][==================>                               ][2.897MB/s]  [176MB/454.7MB][ 38%][===================>                              ][2.839MB/s]  [184MB/454.7MB][ 40%][====================>                             ][2.831MB/s]  [192MB/454.7MB][ 42%][=====================>                            ][2.824MB/s]  [200MB/454.7MB][ 43%][=====================>                            ][2.778MB/s]  [208MB/454.7MB][ 45%][======================>                           ][2.773MB/s]  [216MB/454.7MB][ 47%][=======================>                          ][2.805MB/s]  [224MB/454.7MB][ 49%][========================>                         ][2.8MB/s]  [232MB/454.7MB][ 51%][=========================>                        ][2.829MB/s]  [240MB/454.7MB][ 52%][==========================>                       ][2.824MB/s]  [248MB/454.7MB][ 54%][===========================>                      ][2.818MB/s]  [256MB/454.7MB][ 56%][============================>                     ][2.783MB/s]  [264MB/454.7MB][ 58%][=============================>                    ][2.809MB/s]  [272MB/454.7MB][ 59%][=============================>                    ][2.804MB/s]  [280MB/454.7MB][ 61%][==============================>                   ][2.8MB/s]  [288MB/454.7MB][ 63%][===============================>                  ][2.824MB/s]  [296MB/454.7MB][ 65%][================================>                 ][2.819MB/s]  [304MB/454.7MB][ 66%][=================================>                ][2.815MB/s]  [312MB/454.7MB][ 68%][==================================>               ][2.811MB/s]  [320MB/454.7MB][ 70%][===================================>              ][2.807MB/s]  [328MB/454.7MB][ 72%][====================================>             ][2.756MB/s]  [336MB/454.7MB][ 73%][====================================>             ][2.732MB/s]  [344MB/454.7MB][ 75%][=====================================>            ][2.709MB/s]  [352MB/454.7MB][ 77%][======================================>           ][2.708MB/s]  [360MB/454.7MB][ 79%][=======================================>          ][2.687MB/s]  [368MB/454.7MB][ 80%][========================================>         ][2.686MB/s]  [376MB/454.7MB][ 82%][=========================================>        ][2.686MB/s]  [384MB/454.7MB][ 84%][==========================================>       ][2.685MB/s]  [392MB/454.7MB][ 86%][===========================================>      ][2.685MB/s]  [400MB/454.7MB][ 87%][===========================================>      ][2.685MB/s]  [408MB/454.7MB][ 89%][============================================>     ][2.684MB/s]  [416MB/454.7MB][ 91%][=============================================>    ][2.684MB/s]  [424MB/454.7MB][ 93%][==============================================>   ][2.701MB/s]  [432MB/454.7MB][ 94%][===============================================>  ][2.7MB/s]  [440MB/454.7MB][ 96%][================================================> ][2.699MB/s]  [448MB/454.7MB][ 98%][=================================================>][2.699MB/s]  [454.7MB/454.7MB][100%][==================================================][2.707MB/s]  [454.7MB/454.7MB][100%][==================================================][2.707MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_49824/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_49824/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
